--- a/information.html
+++ b/information.html
@@ -48,7 +48,7 @@
           </li>
           <!-- Additional li elements with corresponding information -->
         </ul>
-        <!-- Additional paragraphs of information (if any) -->
+        <!-- Additional paragraphs of information  -->
       </div>
     </section>
   </main>
